--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -2,15 +2,27 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/img_item_gallery"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_item_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/img_item_gallery"
+        app:layout_constraintStart_toStartOf="@+id/img_item_gallery"
+        app:layout_constraintTop_toBottomOf="@+id/img_item_gallery" />
 </android.support.constraint.ConstraintLayout>
